--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+
 <!-- Home for auth users -->
 {% block body %}
 
@@ -77,7 +78,7 @@
                       <h2>Add your blog to help others by sharing your knowledge !</h2>
                     </div>
                     <div class="content">
-                      <form action="{% url 'add_blog' %}" method="post">
+                      <form action="{% url 'add_blog' %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                           <div class="row">
                           <div class="col-md-6 col-sm-12">
@@ -96,6 +97,14 @@
                               <textarea name="content" rows="6" id="content" placeholder="Content" required=""></textarea>
                             </fieldset>
                           </div>
+
+                            <div class="col-md-6 col-sm-12">
+                            <fieldset>
+                                  <input id="image" type="file" class="" name="image">
+                            </fieldset>
+                          </div>
+
+
                           <div class="col-lg-12">
                             <fieldset>
                               <button type="submit" id="form-submit" class="main-button">Add</button>
