--- a/templates/home.html
+++ b/templates/home.html
@@ -25,14 +25,14 @@
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>zizo pixels <em>.</em></h2></a>
+          <a class="navbar-brand" href="{% url 'home' %}"><h2>zizo pixels <em>.</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home
+                <a class="nav-link" href="{% url 'home' %}">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
@@ -79,10 +79,7 @@
   background-position: center center;
   /* as mentioned by Vad: */
   background-size: cover;">
-
-
 {% else %}
-
 
     <img src="{{ avatar.avatar.url }}" alt="" style=" width: 50px;
   height: 50px;
@@ -91,8 +88,6 @@
   background-position: center center;
   /* as mentioned by Vad: */
   background-size: cover;">
-
-
 
 {% endif %}
 
