--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
        <a href="{% url 'profile' user.id %}" >
 
 
-{% if UserProfile.avatar == 'profile.png' %}
+{% if  avatar.avatar.url  == None %}
      <img src="media/profile.png" alt="" style=" width: 50px;
   height: 50px;
   border-radius: 50%; /*don't forget prefixes*/
@@ -80,7 +80,6 @@
   /* as mentioned by Vad: */
   background-size: cover;">
 {% else %}
-
     <img src="{{ avatar.avatar.url }}" alt="" style=" width: 50px;
   height: 50px;
   border-radius: 50%; /*don't forget prefixes*/
@@ -90,8 +89,6 @@
   background-size: cover;">
 
 {% endif %}
-
-
 
 
        </a>
