--- a/templates/profile.html
+++ b/templates/profile.html
@@ -89,9 +89,47 @@
     <br><br><br><br><br>
     <br><br><br><br><br>
 
+<div class="container">
 
 
 
+{% if  avatar.avatar.url  == None %}
+     <img src="media/profile.png" alt="" style=" width: 150px;
+  height: 150px;
+  border-radius: 50%; /*don't forget prefixes*/
+
+  background-position: center center;
+  /* as mentioned by Vad: */
+  background-size: cover;">
+{% else %}
+    <img src="{{ avatar.avatar.url }}" alt="" style=" width: 150px;
+  height: 150px;
+  border-radius: 50%; /*don't forget prefixes*/
+
+  background-position: center center;
+  /* as mentioned by Vad: */
+  background-size: cover;">
+
+{% endif %}
+
+<form action="{% url 'upload_profile' %}" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+       <div class="col-md-6 col-sm-12">
+                            <fieldset>
+                                  <input id="avatar" type="file" class="" name="avatar">
+                            </fieldset>
+                          </div>
+
+
+                          <div class="col-lg-12">
+                            <fieldset>
+                              <button type="submit" id="form-submit" class="main-button">Add</button>
+                            </fieldset>
+                          </div>
+
+</form>
+
+ </div> 
 
 
 
