--- a/templates/profile.html
+++ b/templates/profile.html
@@ -114,12 +114,9 @@
 
 <form action="{% url 'upload_profile' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-       <div class="col-md-6 col-sm-12">
-                            <fieldset>
-                                  <input id="avatar" type="file" class="" name="avatar">
-                            </fieldset>
-                          </div>
 
+
+    {{ form.as_p}}
 
                           <div class="col-lg-12">
                             <fieldset>
