--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -89,10 +89,6 @@
     <br><br><br><br><br>
     <br><br><br><br><br>
 
-    <a class="" href="{% url 'edit_profile'  user.id%}">Edit </a>
-
-
-
 <div class="container">
 
 
@@ -120,30 +116,99 @@
 
 
 
+{% if  avatar.avatar.url  == None %}
+
+
+<form action="{% url 'upload_profile' %}" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p}}
+    <div class="col-lg-12">
+      <fieldset>
+           <button type="submit" id="form-submit" class="main-button">Add</button>
+      </fieldset>
+    </div>
+</form>
+
+
+{% else %}
+
+<form action="{% url 'remove_img' avatar.id %}" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+      <div class="col-lg-12">
+      <fieldset>
+           <button type="submit" id="form-submit" class="main-button">Remove</button>
+      </fieldset>
+    </div>
+</form>
+
+{% endif %}
+
+
+
+<form >
+    {% csrf_token %}
+    {{ form.bio}}
+    <div class="col-lg-12">
+      <fieldset>
+           <button type="submit" id="form-submit" class="main-button">Add</button>
+      </fieldset>
+    </div>
+</form>
+
+
 
  </div> 
 
 
 
-   <div class="container">
+
+    <section class="contact-us">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-12">
+            <div class="down-contact">
+              <div class="row">
+                <div class="col-lg-8">
+                  <div class="sidebar-item contact-form">
+                      <div class="content">
+                      <form action="{% url 'update_user_info'%}" method="post">
+                        {% csrf_token %}
+                          <div class="row">
+
+                          <div class="col-md-6 col-sm-12">
+                            <fieldset>
+                              <input name="username" type="text" id="username" value="{{ user.username }}" required="">
+                            </fieldset>
+                          </div>
+
+                          <div class="col-lg-12">
+                            <fieldset>
+                              <input name="email" type="text" id="email" value="{{ user.email }}" required="">
+                            </fieldset>
+                          </div>
+                          <div class="col-lg-12">
+                            <fieldset>
+                              <button type="submit" id="form-submit" class="main-button">Update</button>
+                            </fieldset>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
 
 
 
-   name : {{ user }}
-       <br>
-   email : {{ user.email }}
-   <br>
-   last login : {{ user.last_login }}
-    <br>
-   Joined on  : {{ user.date_joined }}
+              </div>
+            </div>
+          </div>
 
 
 
-
-
-
-</div>
-
+        </div>
+      </div>
+    </section>
 
 
 
