--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -145,9 +145,9 @@
 
 
 
-<form >
+<form action="{% url 'add_bio'  %}" method="post">
     {% csrf_token %}
-    {{ form.bio}}
+    {{ form_bio}}
     <div class="col-lg-12">
       <fieldset>
            <button type="submit" id="form-submit" class="main-button">Add</button>
