--- a/templates/user.html
+++ b/templates/user.html
@@ -120,6 +120,15 @@ Followers : {{ followers_count }}
     <section class="blog-posts">
 
 
+    <img src="{{ blog_user_avatar.avatar.url }}" alt="">
+
+
+
+
+
+
+
+
 
       <div class="container">
         <div class="row">
