--- a/templates/read_more.html
+++ b/templates/read_more.html
@@ -124,15 +124,26 @@
           {% endif %}
 
 
-                <span style="font-size: 2em; color: dimgray;">
+
+    {% if user.id == blogs.user.id%}
+                <a href="{% url 'fav' blogs.id %}">
+                      <span style="font-size: 2em; color: dimgray;">
+                                 <i class="fas fa-bookmark"></i>
+                       </span>
+                 </a>
+   {% else %}
+
+    <a href="{% url 'fav' blogs.id %}">
+        <span style="font-size: 2em; color: dimgray;">
                    <i class="far fa-bookmark"></i>
-               </span>
+        </span>
+     </a>
+    {% endif %}
 
 
 
-                <span style="font-size: 2em; color: dimgray;">
-                     <i class="fas fa-bookmark"></i>
-               </span>
+
+
 
 
                   <div class="blog-post">
