--- a/templates/read_more.html
+++ b/templates/read_more.html
@@ -124,26 +124,14 @@
           {% endif %}
 
 
-  {% if check_favorited == None%}
+{#    {% if user.id == blogs.user.id%}#}
+{#        <a href="{% url 'fav' blogs.id %}">#}
+{#           <i class="fas fa-bookmark"></i>#}
+{#         </a>#}
+{#    {% else %}#}
+{#        #}
+{# {% endif %}#}
 
-    {% if user.id == blogs.user.id%}
-
-    <a href="{% url 'fav' blogs.id %}">
-       <i class="fas fa-bookmark"></i>
-     </a>
-   {% else %}
-
- {% endif %}
-   {% else %}
-
-         <a href="{% url 'fav' blogs.id %}">
-                      <span style="font-size: 2em; color: dimgray;">
-                               <i class="far fa-bookmark"></i>
-                       </span>
-                 </a>
-
-
-  {% endif %}
 
 
 
@@ -159,7 +147,8 @@
                     </div>
                     <div class="down-content">
                         <a href="{% url 'read_more' blogs.id %}">
-                      <span>  {{ blogs.title }}</span>
+                      <span>
+                          {{ blogs.title }}</span>
                             </a>
 
                       <ul class="post-info">
@@ -182,7 +171,26 @@
                               <li><i class="fa fa-share-alt"></i></li>
                               <li><a href="#">Facebook</a>,</li>
                               <li><a href="#"> Twitter</a></li>
+
+
+
+                          {% if check_favorited == None%}
+                                <a href="{% url 'fav' blogs.id %}">
+                                    <span style="font-size: 2em; color: dimgray;">
+                                      <i class="far fa-bookmark"></i>
+                                     </span>
+                                 </a>
+                           {% else %}
+                         <span style="font-size: 2em; color: dimgray;">
+                              <a href="{% url 'fav' blogs.id %}">
+                                   <i class="fas fa-bookmark"></i>
+                                 </a>
+                         </span>
+                          {% endif %}
+
+
                             </ul>
+
                           </div>
                         </div>
                       </div>
@@ -247,6 +255,7 @@
                             <h4>{{ comment.user.username }}<span>{{ comment.created}}</span></h4>
                               <p>{{ comment.comment }}</p>
                         </li>
+
                       </ul>
                     </div>
                           {% empty %}
