--- a/templates/index.html
+++ b/templates/index.html
@@ -135,55 +135,55 @@
        {% endfor %}
 
 
-
-               <!--Pagination-->
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-        {% if blogs.has_previous %}
-            <li class="page-item">
-            <a class="page-link" href="?page={{ blogs.previous_page_number }}">Previous</a>
-          </li>
-        {% else %}
-            <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-          </li>
-        {% endif %}
-
-        {% if blogs.number|add:'-4' > 1 %}
-            <li class="page-item"><a class="page-link" href="?page={{ blogs.number|add:'-5' }}">&hellip;</a></li>
-        {% endif %}
-
-        {% for i in blogs.paginator.page_range %}
-            {% if blogs.number == i %}
-                <li class="page-item active" aria-current="page">
-              <span class="page-link">
-                {{ i }}
-                <span class="sr-only">(current)</span>
-              </span>
-            </li>
-            {% elif i > blogs.number|add:'-5' and i < blogs.number|add:'5' %}
-                 <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-            {% endif %}
-        {% endfor %}
-
-        {% if blogs.paginator.num_pages > blogs.number|add:'4' %}
-           <li class="page-item"><a class="page-link" href="?page={{ blogs.number|add:'5' }}">&hellip;</a></li>
-        {% endif %}
-
-        {% if blogs.has_next %}
-            <li class="page-item">
-            <a class="page-link" href="?page={{ blogs.next_page_number }}">Next</a>
-          </li>
-        {% else %}
-            <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Next</a>
-          </li>
-        {% endif %}
-      </ul>
-    </nav>
-    <!--end of Pagination-->
-
-
+{##}
+{#               <!--Pagination-->#}
+{#    <nav aria-label="Page navigation example">#}
+{#        <ul class="pagination justify-content-center">#}
+{#        {% if blogs.has_previous %}#}
+{#            <li class="page-item">#}
+{#            <a class="page-link" href="?page={{ blogs.previous_page_number }}">Previous</a>#}
+{#          </li>#}
+{#        {% else %}#}
+{#            <li class="page-item disabled">#}
+{#            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>#}
+{#          </li>#}
+{#        {% endif %}#}
+{##}
+{#        {% if blogs.number|add:'-4' > 1 %}#}
+{#            <li class="page-item"><a class="page-link" href="?page={{ blogs.number|add:'-5' }}">&hellip;</a></li>#}
+{#        {% endif %}#}
+{##}
+{#        {% for i in blogs.paginator.page_range %}#}
+{#            {% if blogs.number == i %}#}
+{#                <li class="page-item active" aria-current="page">#}
+{#              <span class="page-link">#}
+{#                {{ i }}#}
+{#                <span class="sr-only">(current)</span>#}
+{#              </span>#}
+{#            </li>#}
+{#            {% elif i > blogs.number|add:'-5' and i < blogs.number|add:'5' %}#}
+{#                 <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>#}
+{#            {% endif %}#}
+{#        {% endfor %}#}
+{##}
+{#        {% if blogs.paginator.num_pages > blogs.number|add:'4' %}#}
+{#           <li class="page-item"><a class="page-link" href="?page={{ blogs.number|add:'5' }}">&hellip;</a></li>#}
+{#        {% endif %}#}
+{##}
+{#        {% if blogs.has_next %}#}
+{#            <li class="page-item">#}
+{#            <a class="page-link" href="?page={{ blogs.next_page_number }}">Next</a>#}
+{#          </li>#}
+{#        {% else %}#}
+{#            <li class="page-item disabled">#}
+{#            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Next</a>#}
+{#          </li>#}
+{#        {% endif %}#}
+{#      </ul>#}
+{#    </nav>#}
+{#    <!--end of Pagination-->#}
+{##}
+{##}
 
 
 
